<resources>
    <string name="app_name">Portfolio Calculator</string>
	<string name="zero">0.00</string>
	<string name="ticker">PORTFOLIO</string>
	<string name="listHeader">HOME</string>
	
	<string name="tradeSecurityHeading">New Transaction</string>
	<string name="tickerSymbolInput">Ticker Symbol</string>
	<string name="transactionDateInput">Transaction Date</string>
	<string name="numberOfSharesInput"># of Shares</string>
	<string name="pricePerShareInput">Price Per Share</string>
	<string name="transactionCostInput">Transaction Cost</string>
	<string name="transactionConfirmationButton">Confirm</string>
	
	<string name="userPreferences">User Preferences</string>
	<string name="selectTaxBracket">Select Tax Bracket:</string>
	<string name="incomeTaxInput">Income Tax Rate:</string>
	<string name="capitalGainsInput">Capital Gains Rate:</string>
	
	<string name="info">Info</string>
	<string name="pricePerShare">Price Per Share</string>
	<string name="editButton">Edit</string>
	<string name="deleteButton">Delete</string>
	
	<string name="totalReturnsLabel">Total Returns</string>
	<string name="pre_tax">Pre-Tax Returns</string>
	<string name="post_tax">Post-Tax Returns</string>
	<string name="grossAmount">$</string>
	<string name="percentAmount">%</string>
	
	<string name="marketReturn">Market</string>
	<string name="returnButtonLabel">Back</string>
	
	<string name="dateControlLabelText">From:</string>
	<string name="testDate">1990-05-31</string>	

	<string-array name="tax_array">
	    <item>Pre-Tax</item>
	    <item>Post-Tax</item>
	</string-array>
	
	<string-array name="marketOrDividend_array">
	    <item>Market</item>
	    <item>Dividend</item>
	    <item>Total</item>
	</string-array>
	
	<string-array name="currentOrSold_array">
	    <item>Current</item>
	    <item>Sold</item>
	    <item>Total</item>
	    <item>Alpha</item>
	</string-array>
	
	<string-array name="buyOrSell_array">
	    <item>Buy</item>
	    <item>Sell</item>
	</string-array>
	
	<string-array name="incomeSegement_array">
	    <item>less than $10,000</item>
	    <item>$10,000-$18,925</item>
	    <item>$18,926-$46,250</item>
	    <item>$46,251-$97,850</item>
		<item>$97,851-$193,250</item>
		<item>$193,251-$408,350</item>
		<item>$408,351-$410,000</item>
		<item>greater than $410,000</item>
	    <item>Manually Adjust</item>
	</string-array>
	
	<string-array name="date_array">
	    <item>1d</item>
	    <item>1w</item>
	    <item>1m</item>
	    <item>3m</item>
	    <item>6m</item>
	    <item>1y</item>
	    <item>MAX</item>
	    <item>Custom</item>
	</string-array>
	
</resources>
