<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/closerLookSecurityInfo"
    android:orientation="horizontal" >

   	<TextView
		android:id="@+id/info"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:text="@string/info"
		android:gravity="center"
		android:textSize="20sp"
		android:background="@color/headerBackground"
		android:textColor="@color/white_text"
		android:layout_alignParentTop="true"		    
			    />
   
	<ListView
	    android:id="@+id/securityInfoList"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@+id/info"
	    android:layout_above="@+id/buttonHolder" >	
	    </ListView>
	
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="40dip"
	    android:orientation="horizontal"
	    android:id="@+id/buttonHolder"
	    android:layout_alignParentBottom="true"	>    
	<Button
       android:id="@+id/editButton"
       android:layout_width="fill_parent"
       android:layout_height="40dip"
       android:gravity="center"
       android:textColor="@color/white_text"
	   android:textSize="14sp"
       android:text="@string/editButton"
       android:layout_weight="1"
       android:background="@drawable/summary_button"
       android:layout_marginRight="2dip"/>

   <Button
       android:id="@+id/deleteButton"
       android:layout_width="fill_parent"
       android:layout_height="40dip"
       android:gravity="center"
       android:text="@string/deleteButton"
       android:textColor="@color/white_text"
       android:textSize="14sp"
       android:layout_weight="1"
       android:background="@drawable/summary_button"/>
   
   </LinearLayout>

</RelativeLayout>
