<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundApp">
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="60dip"
    android:orientation="horizontal"
    android:layout_marginBottom="5dip"
    android:background="@color/headerBackground" >
        
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/userPreferences"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white_text"
         />
    
    </LinearLayout>
	
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_marginTop="20dip"
    android:background="@color/listItemNormal">
    
    <TextView
        android:id="@+id/selectTaxBracketLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectTaxBracket"
        android:textSize="15sp"
        android:gravity="left"
        android:layout_marginLeft="5dip"/>	

    <Spinner
        android:id="@+id/taxBracketSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    </LinearLayout>
	
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_marginTop="20dip"
    android:background="@color/listItemNormal">
        
    <TextView
        android:id="@+id/incomeTaxLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/incomeTaxInput"
        android:textSize="15sp"
        android:paddingLeft="5dip"
        />

    <EditText
        android:id="@+id/editIncomeTax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight ="1"
        android:textSize="15sp"
        android:inputType="numberDecimal"
        android:gravity="right"/>

	
    <TextView
        android:id="@+id/incomeTaxPercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.75"
        android:text="@string/percentAmount"
        android:textSize="15sp"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="5dip"
        />
	</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_marginTop="20dip"
    android:background="@color/listItemNormal">
        
    <TextView
        android:id="@+id/capitalGainsLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/capitalGainsInput"
        android:textSize="15sp"
        android:paddingLeft="5dip"
        />

    <EditText
        android:id="@+id/editCapitalGains"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight ="1"
        android:textSize="15sp"
        android:inputType="numberDecimal"
        android:gravity="right"/>
    
    <TextView
        android:id="@+id/capitalGainsPercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.75"
        android:text="@string/percentAmount"
        android:textSize="15sp"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="5dip"
        />
        
	</LinearLayout>
</LinearLayout>
